--- a/QMessage/CMakeLists.txt
+++ b/QMessage/CMakeLists.txt
@@ -12,7 +12,7 @@ set(OQS_CPP_VERSION_STR "${OQS_CPP_VERSION_NUM}")
 add_definitions(-DOQS_CPP_VERSION="${OQS_CPP_VERSION_STR}")
 
 add_subdirectory ("liboqs-cpp-0.7.2")
-add_subdirectory ("src")
+# add_subdirectory ("src")
 
 # Add source to this project's executable.
 add_executable (QMessage 
@@ -22,7 +22,11 @@ add_executable (QMessage
 	"src/ServerSocket.cpp"
 	"src/message.cpp"
 	"src/encrypt.cpp"
-)
+	"src/UseImgui.cpp"
+	"include/showimgui.h"
+	"src/UDPServer.cpp"
+	"include/UDPClient.h"
+	"src/UDPClient.cpp")
 
 
 if (CMAKE_VERSION VERSION_GREATER 3.12)
@@ -57,3 +61,13 @@ if(WIN32)
 	PUBLIC ws2_32)
 endif()
 
+
+ find_package(glad CONFIG REQUIRED)
+ target_link_libraries(${PROJECT_NAME} PRIVATE glad::glad)
+
+
+ find_package(glfw3 CONFIG REQUIRED)
+ target_link_libraries(${PROJECT_NAME} PRIVATE glfw)
+
+ find_package(imgui CONFIG REQUIRED)
+ target_link_libraries(${PROJECT_NAME} PRIVATE imgui::imgui)
